@@ -1019,10 +1019,10 @@ version:date:md5:filename:x64:trial:platform
     # Allow disabling the version check if it is slowing things down (e.g. in a simulation study)
     currentver <- versioninfo[versioninfo$md5 == digest(cmd, algo = "md5", file = TRUE), ]
     if (nrow(currentver) == 0) {
-      versiontext <- "MLwiN (version: unknown or >3.02)"
+      versiontext <- "MLwiN (version: unknown or >3.03)"
     } else {
-      if (currentver$version < 2.28) {
-        # Block versions >year older than current release
+      if (currentver$version < 2.36) {
+        # Block releases older than a year or so (allow 2.36 as this corresponds to the trial version)
         stop("The current version of MLwiN is too old, please update it from http://www.bris.ac.uk/cmm/software/mlwin/download/upgrades.html")
       }
       versiontext <- paste0("MLwiN (version: ", currentver$version, ")")
