@@ -1,3 +1,7 @@
+Mon Feb 11 2019
+1. Changes
+   * Increase minimum suggested version of MLwiN to 2.36
+
 Fri Feb 08 2019
 1. Bug fixing
    * Warn the user if an expected column is not present in the data
